Save local work before pull

--- a/index.html
+++ b/index.html
@@ -1,3 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Gloria Ngwu - Beginner Front-End Web Developer specializing in HTML5 and accessible web design.">
+    <meta name="keywords" content="front-end developer, web developer, HTML5, accessibility, responsive design, web standards, portfolio">
+    <meta name="author" content="Gloria Ngwu">
+
+    <!-- Open Graph for social media -->
+    <meta property="og:title" content="Gloria Ngwu - Front-End Web Developer">
+    <meta property="og:description" content="Professional front-end developer creating accessible and modern web experiences">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gloriangwu.dev">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://gloriangwu.dev">
+
+    <title>Gloria Ngwu - Front-End Web Developer | HTML5 Expert</title>
+</head>
+
+<body>
+
+    <!-- Page header with site branding -->
+    <header>
+        <h1>Gloria Ngwu</h1>
+        <p><strong>Front-End Web Developer</strong></p>
+        <p>Crafting accessible and modern web experiences with clean, semantic code</p>
+
+        <!-- Primary site navigation -->
+        <nav aria-label="Main navigation">
+            <h2>Site Navigation</h2>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
 <main id="main-content">
 
     <!-- About section -->
